minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__lexical__tests__character_string_literal.snap
---
source: minigu/parser/src/parser/impls/lexical.rs
expression: parsed
---
- kind: Char
  literal: "ab\ncd"
- start: 0
  end: 8
