minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__lexical__tests__identifier_2.snap
---
source: minigu/parser/src/parser/impls/lexical.rs
expression: parsed
---
- abcd
- start: 0
  end: 6
