minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__lexical__tests__unsigned_integer_2.snap
---
source: minigu/parser/src/parser/impls/lexical.rs
expression: parsed
---
- kind: Octal
  integer: 0o123
- start: 0
  end: 5
