minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__lexical__tests__unsigned_integer_3.snap
---
source: minigu/parser/src/parser/impls/lexical.rs
expression: parsed
---
- kind: Hex
  integer: "0x123"
- start: 0
  end: 5
