minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__lexical__tests__unsigned_integer_4.snap
---
source: minigu/parser/src/parser/impls/lexical.rs
expression: parsed
---
- kind: Binary
  integer: 0b101
- start: 0
  end: 5
